--- a/speakers.css
+++ b/speakers.css
@@ -1,140 +1,106 @@
-*{
-    margin: 0px;
-    padding:0px;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration:none;
+body {
+  font-family: 'Quicksand', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
+  color: #222;
 }
-.head{
-        width: 100vw;
-        height: 30vh;
-        background-color: #1a1b1c;
+
+.head, .foot {
+  background-color: #111;
+  color: white;
+  padding: 20px 0;
 }
-.top-div{
-    display: flex;
-    justify-content: space-around;
+
+.top-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
-.topic{
-    border-top: 4px solid #696b6b;
-    margin-left: 100px;
+
+.menu-date ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
 }
-.topic a{
-    color:rgb(239, 183, 183);
-    font-size: 55px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-family: 'Open Sans Condensed', sans-serif; 
+
+.menu-date li a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s;
 }
-.topic a:hover{
-    color: #e7e7e7;
+
+.menu-date li a:hover {
+  color: #ff9800;
 }
-.menu-date{
-    margin-top: 60px;
-    margin-right: 40px;
-    text-align: center;
+
+.schedule-sec {
+  padding: 40px 20px;
+  background-color: #eaeaea;
+  text-align: center;
 }
-.menu-date h4{
-    font-size: 30px;
-    color: #5cdeae;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: lighter;
+
+.main-content {
+  padding: 40px 20px;
 }
-.menu-date ul{
-    display: flex;
+
+.bio-speaker {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: white;
+  margin: 20px 0;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-.menu-date li{
-    padding:10px 30px;
-    font-size: 20px;
+
+.div-content {
+  width: 65%;
 }
-.menu-date a{
-    color: white;
+
+.img-content {
+  width: 30%;
+  text-align: center;
+  align-self: center;
 }
-.menu-date a:hover{
-    color: #3a3737;
+
+.img-content img {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-bottom: 10px;
 }
-.schedule-sec{
-    width: 100vw;
-    height: 180px;
-    background-color: #1d1e1c;
-   text-align: center;
+
+.img-content p {
+  margin: 5px 0;
+  font-weight: 500;
 }
-.schedule-div{
-    width: 50vw;
-    margin: auto;
-    padding: 30px 0px 30px 0px;
+
+.foot {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
 }
-.schedule-div h{
-    font-size: 32px;
-    color: #6b6d6d;
+
+.foot ul {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+  padding: 0;
+  margin: 0;
 }
-.schedule-div p{
-    font-size: 25px;
-    padding :20px 0px 20px 0px;
-    color: #888;
+
+.foot a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s;
 }
-.main-content{
-    margin: 80px auto;
-}
-.bio-speaker{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px ;
-}
-.div-content{
-    width: 550px;
-}
-.div-content h2{
-    font-family: 'Quicksand', sans-serif;
-    padding-bottom: 6px;
-    color: #6d7070;
-}
-.div-content h4{
-    padding-bottom: 15px;
-    color: #191a1a;
-}
-.div-content p{
-    padding-top: 5px;
-    padding-bottom: 10px;
-    color: #888;
-}
-.div-content h3{
-    color: #656968;
-}
-.img-content{
-    margin: 0px 40px;
-    display: grid;
-    border: 1px groove;
-    border-radius: 5px;
-    text-align: center;
-    padding: 20px;
-}
-.img{
-    border-radius: 50%;
-}
-.foot{
-    background-color:#171819;
-    display: flex;
-    justify-content: space-around;
-    height: 15vh;
-}
-.foot-1{
-    text-transform: capitalize;
-    color: #5c5d5d;
-    margin:auto 0px;
-}
-.foot-2{
-    margin: auto 0px;
-}
-.foot-2 ul{
-    text-transform: capitalize;
-    display: flex;  
-}
-.foot-2 li{
-    padding: 0px 20px;
-}
-.foot-2 a{
-    color: white;
-}
-.foot-2 a:hover{
-    color: #888;
+
+.foot a:hover {
+  color: #ff9800;
 }
